Add promotion application to cart
